Add: Basic structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
-<div class="main">
-  <p class="chompers-class">&#123; Chompers &#125;</p>
+<div class="main_container">
+  <nav>Navbar</nav>
+  <div id="side1">Side1</div>
+  <div id="side2">Side2</div>
+  <div id="greetings">Greetings</div>
+  <div id="project-txt">Project</div>
+  <div id="p1">P1</div>
+  <div id="p2">P2</div>
+  <div id="p3">P3</div>
+  <div id="about">About</div>
+  <div id="chat">Chat</div>
+  <div id="contact">Contact</div>
 </div>
-
-
-<router-outlet></router-outlet>
