--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,7 @@
         "side1 about side2"
         "side1 chat side2"
         "side1 contact side2";
+    text-align: center;
 
 }
 
@@ -59,4 +60,21 @@ nav {
 #contact {
     background: rgb(138, 208, 138);
     grid-area: contact;
+}
+
+@media only screen and (max-width: 500px) {
+    .main_container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 7vh 80vh 7vh 80vh 80vh 80vh 60vh 80vh 80vh;
+        grid-template-areas: 
+            "nav"
+            "greetings"
+            "project-txt"
+            "p1"
+            "p2"
+            "p3"
+            "about"
+            "chat"
+            "contact";
+    }
 }
