Add: greetings part

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="main_container">
-  <nav>Navbar</nav>
+  <nav>About</nav>
   <div id="side1">Side1</div>
   <div id="side2">Side2</div>
-  <div id="greetings">Greetings</div>
+  <div id="greetings"><app-greetings></app-greetings></div>
   <div id="project-txt">Project</div>
   <div id="p1">P1</div>
   <div id="p2">P2</div>
