--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,8 @@
 .main_container {
+    color: white;
     display:grid;
-    grid-template-columns: 1fr 5fr 1fr;
-    grid-template-rows: 7vh 80vh 7vh 80vh 80vh 80vh 60vh 80vh 80vh;
+    grid-template-columns: 0.8fr 5fr 0.8fr;
+    grid-template-rows: 5vh 70vh 7vh 80vh 80vh 80vh 60vh 80vh 80vh;
     grid-template-areas: 
         "nav nav nav"
         "side1 greetings side2"
@@ -17,20 +18,21 @@
 }
 
 nav {
-    background: rgb(189, 242, 189);
+    text-align: end;
     grid-area: nav;
+    font-size: 25px;
+    padding-right: 2.3em;
 }
 
 #side1 {
-    background: rgb(72, 255, 72);
+    //background: rgb(72, 255, 72);
     grid-area: side1;
 }
 #side2 {
-    background: rgb(72, 197, 235);
+    //background: rgb(72, 197, 235);
     grid-area: side2;
 }
 #greetings {
-    background: rgb(54, 165, 208);
     grid-area: greetings;
 }
 #project-txt {
