--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 html {
-    background-color: rgb(255, 255, 255);
+    //background-color: rgb(12, 32, 52);
+    background-image: linear-gradient(to bottom right, rgb(4, 11, 17), rgb(24, 62, 99));
 }
