--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main_container">
   <nav>About</nav>
-  <div id="side1">Side1</div>
-  <div id="side2">Side2</div>
+  <div id="side1"></div>
+  <div id="side2"></div>
   <div id="greetings"><app-greetings></app-greetings></div>
   <div id="project-txt">Project</div>
   <div id="p1">P1</div>
