--- a/src/app/components/greetings/greetings.component.html
+++ b/src/app/components/greetings/greetings.component.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="hello">
-        <p class="div-txt orange">&#60;div&#62;</p>
-        <p class="tab intro">Hello :) , my 	<span class="orange">$&#123;</span>name<span class="orange">&#125;</span> is</p>
+        <p class="div-txt orange"><span class="orange">&#60;</span>div<span class="orange">&#62;</span></p>
+        <p class="tab intro">Hello :) , my 	<span class="orange">$&#123;</span>name<span class="orange">&#125;</span> is <span class="line-wrap"> -<span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span></span></p>
         <p class="tab name">Renan Vitor Fukushima</p>
-        <p class="tab last">and I'm a <span class="orange web">Web Developer!</span></p>
+        <p class="tab last">and I'm a <span class="silver web">Web Developer.</span></p>
+        <p class="tab div-txt orange">&#60;button&#62; <button mat-flat-button class="btn">Contact me!</button> &#60;/button&#62; </p>
         <p class="div-txt orange">&#60;/div&#62;</p>
     </div>
     <div class="img1">
         <img src="assets/dev2.png" alt="">
-
     </div>
 </div>
 
