--- a/src/app/components/greetings/greetings.component.scss
+++ b/src/app/components/greetings/greetings.component.scss
@@ -9,20 +9,26 @@
     grid-area: hello;
     //border: 1px solid;
     padding-top: 15%;
-    padding-left: 10%;
+    //padding-left: 10%;
     text-align: left;
-    line-height: normal;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Times New Roman', Times, serif;
 }
 .img1 {
     grid-area:img1;
-    padding-right: 2.6em;
-    padding-top: 2em;
+    padding-right: 0em;
+    padding-top: 4em;
+    //filter: brightness(2);
     //border: 1px solid;
+    background-image: radial-gradient(circle, rgb(255, 255, 255), rgb(71, 118, 165), rgba(7,21,33,1) 60%);
 }
 
+// img {
+//     //background-image: radial-gradient(circle, rgb(255, 255, 255), rgb(71, 118, 165), rgb(4, 11, 17) 50%);
+//     // filter: brightness(1);
+// }
+
 .tab {
-    margin-left: 5%;
+    padding-left: 8%;
 }
 
 p {
@@ -30,22 +36,25 @@ p {
 }
 
 .intro {
-    line-height: 20px;
     font-size: 20px;
+    //margin-bottom: -1.6em;
 }
 
 .name {
-    line-height: 10%;
+    line-height: 100%;
 }
 
 .last {
     font-size: 25px;
-    line-height: 20px;
+    //margin-top: -1.6em;
+}
+
+.silver {
+    color: rgb(201, 201, 201);
 }
 
 .div-txt {
     font-size: 25px;
-    line-height: 20px;
     font-weight: 800;
 }
 
@@ -56,4 +65,33 @@ p {
 
 .web {
     font-size: 35px;
+}
+
+.btn {
+    background-color: orange;
+    color: black;
+    font-weight: 700;
+    padding-top: 1px;
+
+}
+.line-wrap {
+    color:orange;
+}
+.line {
+    margin-left: -1.8px;
+}
+
+
+@media only screen and (max-width: 500px) {
+    .container {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "hello";
+    }
+    .img1 {
+        display: none;
+    }
+    .tab {
+        padding-left: 18%;
+    }
 }
