--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,1 +1,6 @@
-<p>nav works!</p>
+<div class="flex">
+    <button mat-button class="contact">Contact/></button>
+    <button mat-button><div>About</div></button>
+    <button mat-button>Projects</button>
+    <img src="assets/logo.png" alt="">
+</div>
