--- a/src/app/components/greetings/greetings.component.html
+++ b/src/app/components/greetings/greetings.component.html
@@ -1,21 +1,22 @@
+<div class="mobile-flex">
 <div class="container">
     <div class="hello">
-<<<<<<< HEAD
-        <p class="div-txt orange"><span class="orange">&#60;</span>div<span class="orange">&#62;</span></p>
-=======
         <p class="div-txt orange">&#60;div&#62;</p>
->>>>>>> 187aec1e97001dadccedb3fb751e75d339fb9dc3
         <p class="tab intro">Hello :) , my 	<span class="orange">$&#123;</span>name<span class="orange">&#125;</span> is <span class="line-wrap"> -<span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span></span></p>
         <p class="tab name">Renan Vitor Fukushima</p>
-        <p class="tab last">and I'm a <span class="silver web">Web Developer.</span></p>
-        <p class="tab div-txt orange">&#60;button&#62; <button mat-flat-button class="btn">Contact me!</button> &#60;/button&#62; </p>
+        <p class="tab name2"><span class="">&#60;  Software Developer /> </span></p>
+        <p class="tab intro">I aim to design and build quality responsive websites, and rich interactive web apps. <br>
+        Targeting <span class="assets">Angular</span>, <span class="assets">Typescript</span>, <span class="assets">Firebase</span> and other web development opportunities.</p>
+        <br>
+        <p class="tab div-txt orange"><button mat-flat-button class="btn">Contact me! /></button></p>
         <p class="div-txt orange">&#60;/div&#62;</p>
+        <br>
 
-        
     </div>
     <div class="img1">
-        <img src="assets/dev2.png" alt="">
+        <img src="assets/dev2_2.png" alt="" class="dude-png">
     </div>
+</div>
 </div>
 
 
