--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,11 @@
   <div id="side1"></div>
   <div id="side2"></div>
   <div id="greetings"><app-greetings></app-greetings></div>
-  <div id="project-txt">Project</div>
-  <div id="p1">P1</div>
+  <div id="project-txt">
+    <br>  
+    Projects
+  </div>
+  <div id="p1"><app-p1></app-p1></div>
   <div id="p2">P2</div>
   <div id="p3">P3</div>
   <div id="about">About</div>
