--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,7 @@
         "side1 chat side2"
         "side1 contact side2";
     text-align: center;
+    font-family:monospace;
 
 }
 
@@ -36,11 +37,15 @@ nav {
     //background-image: url("/assets/dev2.png")
 }
 #project-txt {
-    background: rgb(60, 98, 60);
+    // background: rgb(60, 98, 60);
     grid-area: project-txt;
+    font-size: 28px;
+    color: whitesmoke;
 }
 #p1 {
-    background: rgb(135, 101, 238);
+    //background: rgb(135, 101, 238);
+    border: 1px solid;
+    border-radius: 10px;
     grid-area: p1;
 }
 #p2 {
@@ -63,6 +68,7 @@ nav {
     background: rgb(138, 208, 138);
     grid-area: contact;
 }
+
 
 @media only screen and (max-width: 500px) {
     .main_container {
