--- a/src/app/components/p1/p1.component.html
+++ b/src/app/components/p1/p1.component.html
@@ -1,7 +1,14 @@
 <div class="container">
     <header>
-        <br>dotCanvas
+        <br>
+        <span class="tab"></span><span class="grey">dot</span>Canvas
+        <br>
     </header>
-    <div class="video"></div>
-    <div class="description"></div>
+    <div class="video">
+        <!-- <video src="assets/v1.mp4" controls width="900px" height="675px"></video> -->
+    </div>
+    <div class="description">
+        <h1>patito</h1>
+        <p>putiti</p>
+    </div>
 </div>
