--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,4 @@ html {
     background: linear-gradient(0deg, rgba(19,49,78,1) 21%, rgba(7,21,33,1) 87%);
 }
 //html, body { height: 100%; }
-body { margin: 0; font-family:'Times New Roman', Times, serif;}
+body { margin: 0; font-family: monospace;}
