--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,13 +39,13 @@ nav {
 #project-txt {
     // background: rgb(60, 98, 60);
     grid-area: project-txt;
-    font-size: 28px;
+    font-size: 38px;
     color: whitesmoke;
 }
 #p1 {
     //background: rgb(135, 101, 238);
-    border: 1px solid;
-    border-radius: 10px;
+    // border: 1px solid;
+    // border-radius: 10px;
     grid-area: p1;
 }
 #p2 {
