Add: p1 Long description half done

--- a/src/app/components/p1/long/long.component.html
+++ b/src/app/components/p1/long/long.component.html
@@ -1,5 +1,40 @@
 <h1>Overview</h1>
-<p><span class="grey">dot</span>Canvas is an <a href="">r/place</a> inspired app. The idea is to provide users
+<p>
+    <span class="grey">dot</span>Canvas is an <a href="">r/place</a> inspired app. The idea is to provide users
     with a canvas, where they can zoom in and place pixels on it. Anyone connected will be able to
     see the pixels being placed live, which gives the site a 'lively' feel (when populated).</p>
 <p>
+<p>
+    Even though the project does not aim to solve a particular business problem, nor is it particularly entretaining
+    without a user base interacting with it, it did serve as a good template project. For once, it helped me learn more about 
+    <span class="orange">Typescript</span>, <span class="orange">Angular</span> and <span class="orange">Firebase</span>,
+    incorporating it all into a fullstack application. Moreover, it also gave me a lot of insight into how to think about
+    the page structure and how to interact with it. All the while inspiring me with new ideas!
+</p>
+
+
+<h1>Project Structure</h1>
+    <img src="assets/project_flow.png" alt="">
+
+<h1>Challenges</h1>
+<p>
+    Since I'm using <span class="orange">Firebase</span> as the backend - plus not having to worry about scalability issues -
+    most of the implementation challenges falls into the frontend side. In particular, the issues that emmerge when changing the
+    scale of the canvas, while keeping track of where the tiles must be placed.
+</p>
+<h2>Scaling the canvas - enterPaintMode()</h2>
+    <img src="assets/enter paint mode.png" alt="">
+
+<h2>Positioning</h2>
+
+<h2>Aligning</h2>
+
+<h2>Click'n drag</h2>
+
+<h1>Front-End</h1>
+<h1>Back-End</h1>
+
+
+
+
+
