--- a/src/app/components/p1/long/long.component.html
+++ b/src/app/components/p1/long/long.component.html
@@ -22,12 +22,18 @@
     most of the implementation challenges falls into the frontend side. In particular, the issues that emmerge when changing the
     scale of the canvas, while keeping track of where the tiles must be placed.
 </p>
-<h2>Scaling the canvas - enterPaintMode()</h2>
-    <img src="assets/enter paint mode.png" alt="">
+<h2>Scaling the canvas</h2>
+    <img src="assets/scaling.png" alt="">
 
-<h2>Positioning</h2>
+<h2>Positioning the view</h2>
+    <img src="assets/positioning.png" alt="">
 
-<h2>Aligning</h2>
+<h2>Aligning Draw Guide</h2>
+    <img src="assets/align1.png" alt="">
+    <img src="assets/align_mid.png" alt="">
+    <img src="assets/find_intersection.png" alt="">
+    <img src="assets/offset mid top.png" alt="">
+    <img src="assets/set guide pos.png" alt="">
 
 <h2>Click'n drag</h2>
 
