--- a/src/app/components/p1/short/short.component.html
+++ b/src/app/components/p1/short/short.component.html
@@ -1,19 +1,18 @@
 <div class="container">
     <div class="text">
         <h1>Overview</h1>
-        <p><span class="grey">dot</span>Canvas is an <a href="">r/place</a> inspired app. The idea is to provide users
-            with a canvas, where they can zoom in and place pixels on it. Anyone connected will be able to
+        <p>
+            <span class="grey">dot</span>Canvas is an <a href="">r/place</a> inspired app. The idea is to provide users
+            with a canvas and let them zoom in to place pixels on it. Anyone connected will be able to
             see the pixels being placed live, which gives the site a 'lively' feel (when populated).</p>
         <p>
-            
-        </p>
-        <p>Even though the project does not aim to solve a particular business problem, nor is it particularly entretaining
+        <p>
+            Even though the project does not aim to solve a particular business problem, nor is it particularly entretaining
             without a user base interacting with it, it did serve as a good template project. For once, it helped me learn more about 
             <span class="orange">Typescript</span>, <span class="orange">Angular</span> and <span class="orange">Firebase</span>,
             incorporating it all into a fullstack application. Moreover, it also gave me a lot of insight into how to think about
-            the page structure and how to interact with it. All the while inspiring me with new ideas!
-             
-
+            the page structure and how to interact with it.
         </p>
+        
     </div>
 </div>
