--- a/src/app/components/p1/short/short.component.html
+++ b/src/app/components/p1/short/short.component.html
@@ -3,7 +3,7 @@
         <h1>Overview</h1>
         <p>
             <span class="grey">dot</span>Canvas is an <a href="">r/place</a> inspired app. The idea is to provide users
-            with a canvas and let them zoom in to place pixels on it. Anyone connected will be able to
+            with a canvas and let them place pixels on it. Anyone connected will be able to
             see the pixels being placed live, which gives the site a 'lively' feel (when populated).</p>
         <p>
         <p>
