--- a/src/app/components/p1/long/long.component.html
+++ b/src/app/components/p1/long/long.component.html
@@ -1,7 +1,7 @@
 <h1>Overview</h1>
 <p>
     <span class="grey">dot</span>Canvas is an <a href="https://www.reddit.com/r/place/">r/place</a> inspired app. The idea is to provide users
-    with a canvas and let them zoom in to place pixels on it. Anyone connected will be able to
+    with a canvas and let them place pixels on it. Anyone connected will be able to
     see the pixels being placed live, which gives the site a 'lively' feel (when populated).</p>
 <p>
 <p>
@@ -69,3 +69,28 @@
 </p>
     <img src="assets/offset mid top.png" alt="">
     <img src="assets/set guide pos.png" alt="">
+
+<h1>Conclusion</h1>
+<p>
+    I really enjoy working on this project. It began as a way for me to practice the async stuff, but I ended up learning a lot about
+    many other aspects of web development and went beyond just the front end. Above all, it made me really motivated to keep going, while 
+    flooding my imagination with new ideas for the next project. 
+</p>
+<p>
+    However, moving forwards, there are a lot of things that I need to improve on. First of all, I'm sure I'm not using the full capabilities and 
+    the best practices of <span class="orange">Angular</span> (although I do feel like I improved a lot when compared to my first 
+    project, Rank2Earn). Also, I'm probably not taking full advantage of the extra typing resources <span class="orange">Typescript 
+    </span> provides. Lastly, my conception of the <span class="orange">Firebase</span> Realtime DB it's still pretty raw. It's
+    so easy to implement, that I feel like I'm left with many gaps in my understanding.
+</p>
+<p>
+    Overall, I'm glad I developed enough of this project, to the point where I at least feel the desire to showcase it to other people - 
+    while learning important, employable skills. 
+</p>
+<h3>Todo:</h3>
+<ul>
+    <li>Write tests</li>
+    <li>UI: prettify the size btn</li>
+    <li>UX: sometimes, the click'n drag can feel 'laggy'</li>
+    
+</ul>
