--- a/src/app/components/p1/long/long.component.html
+++ b/src/app/components/p1/long/long.component.html
@@ -1,14 +1,14 @@
 <h1>Overview</h1>
 <p>
-    <span class="grey">dot</span>Canvas is an <a href="https://www.reddit.com/r/place/">r/place</a> inspired app. The idea is to provide users
-    with a canvas and let them place pixels on it. Anyone connected will be able to
+    <span class="grey">dot</span>Canvas is an <a href="https://www.reddit.com/r/place/">r/place</a> inspired app. The idea is to 
+    provide users with a canvas and let them place pixels on it. Anyone connected will be able to
     see the pixels being placed live, which gives the site a 'lively' feel (when populated).</p>
 <p>
 <p>
     Even though the project does not aim to solve a particular business problem, nor is it particularly entertaining
     without a user base interacting with it, it served as a good template project. For once, it helped me learn more about 
     <span class="orange">Typescript</span>, <span class="orange">Angular</span> and <span class="orange">Firebase</span>,
-    incorporating it all into a full stack application. Moreover, it also gave me a lot of insight into how to think about
+    incorporating it all into a full-stack application. Moreover, it also gave me a lot of insight into how to think about
     the page structure and how to interact with it.
 </p>
 
@@ -19,17 +19,26 @@
 <h1>Challenges</h1>
 <p>
     Since I'm using <span class="orange">Firebase</span> to handle the backend, - plus not having to worry about scalability issues -
-    most of the implementation challenges fell into the frontend side. In particular, the issues that emmerge when changing the
+    most of the implementation challenges are front-end related. In particular, the issues that emmerge when changing the
     scale of the canvas, while keeping track of where the tiles must be placed.
 </p>
 <h2>Scaling the canvas</h2>
     <img src="assets/scaling.png" alt="">
 <br>
 <br>
-<p>
+<!-- <p>
     This is the 'trick' that inspired me to do this project (check out <a href="https://www.redditinc.com/blog/how-we-built-rplace/">How We Built r/Place</a> for more details). 
     The idea is to wrap the canvas with a div, then apply scaling to the div in order to scale the canvas. When I tried it,
     it worked so well that I became really inspired to do my version of the implementation.
+</p> -->
+<p>
+    The first thing to do is to scale the canvas, so that the users can see which pixels are being painted. To do so, the canvas is wrapped
+    by a div, and the 'transform: scale' is applied to it.
+</p>
+<p>
+    I found this solution in <a href="https://www.redditinc.com/blog/how-we-built-rplace/">this</a> post, where one of the devs of r/place
+    talks about how the sub was created. It's a much better solution than my first thought, which was to redraw a bigger canvas. Glad I've
+    found the post! 
 </p>
 
 <h2>Positioning the view</h2>
@@ -48,7 +57,9 @@
     the scaled canvas at (0,0) of the viewport. Then,  I just had to offset the canvas by half of the clients' width/height 
     plus the value of the scaled coordinates. 
 </p>
-
+<!-- <p>
+    In order to position the canvas 
+</p> -->
 
 <h2>Aligning the Draw Guide</h2>
     <img src="assets/align1.png" alt="">
@@ -74,10 +85,10 @@
 <p>
     I really enjoy working on this project. It began as a way for me to practice the async stuff, but I ended up learning a lot about
     many other aspects of web development and went beyond just the front end. Above all, it made me really motivated to keep going, while 
-    flooding my imagination with new ideas for the next project. 
+    inspiring new ideas for the next project. 
 </p>
 <p>
-    However, moving forwards, there are a lot of things that I need to improve on. First of all, I'm sure I'm not using the full capabilities and 
+    Moving forwards, there are a lot of things that I need to improve on. First of all, I'm sure I'm not using the full capabilities and 
     the best practices of <span class="orange">Angular</span> (although I do feel like I improved a lot when compared to my first 
     project, Rank2Earn). Also, I'm probably not taking full advantage of the extra typing resources <span class="orange">Typescript 
     </span> provides. Lastly, my conception of the <span class="orange">Firebase</span> Realtime DB it's still pretty raw. It's
