--- a/src/app/components/p1/p1.component.html
+++ b/src/app/components/p1/p1.component.html
@@ -16,6 +16,6 @@
     </div>
 
     <div class="video">
-        <video src="assets/v1.mp4" controls></video>
+        <video src="assets/try1.mp4" controls></video>
     </div>
 </div>
