--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     Projects
   </div>
   <div id="p1"><app-p1></app-p1></div>
-  <div id="p2">P2</div>
+  <div id="p2"><app-p2></app-p2></div>
   <div id="p3">P3</div>
   <div id="about">About</div>
   <div id="chat">Chat</div>
