--- a/src/app/components/p1/short/short.component.html
+++ b/src/app/components/p1/short/short.component.html
@@ -2,6 +2,10 @@
     <div class="text">
         <h1>Overview</h1>
         <p>
+            Created using: <span class="orange">HTML/CSS</span>, <span class="orange">Angular</span>,
+             <span class="orange">TypeScript</span>, <span class="orange">Firebase</span>
+        </p>
+        <p>
             <span class="grey">dot</span>Canvas is an <a href="">r/place</a> inspired app. The idea is to provide users
             with a canvas and let them place pixels on it. Anyone connected will be able to
             see the pixels being placed live, which gives the site a 'lively' feel (when populated).</p>
