--- a/src/app/components/p2/p2.component.html
+++ b/src/app/components/p2/p2.component.html
@@ -2,18 +2,18 @@
     <header>
         
         <div>
-            <a href="https://github.com/R-V-F/rplace-clone">
+            <a href="https://github.com/R-V-F/rank2e">
                 <img src="assets/gh4.png" alt="" class="icon">
             </a>
         </div>
         <div>
-            <a href="https://dotcanvas-b2cb6.web.app/">
+            <a href="https://rank2earn.firebaseapp.com/">
                 <img src="assets/live.png" alt="" class="icon">
             </a>
         </div>
         <div class="name">
             <br>
-            1.<span class="grey">dot</span>Canvas
+            2.<span class="">Rank</span><span class="big grey">2</span><span class="">Earn</span>
             <br> 
         </div>
     </header>
@@ -23,8 +23,8 @@
             <mat-button-toggle  (change)="toggleLong()"><span class="bold">Long</span></mat-button-toggle>
         </mat-button-toggle-group>
         <div class="description" mat-elevation-z9>
-            <app-long *ngIf="long_dscr"></app-long>
-            <app-short *ngIf="!long_dscr"></app-short>
+            <app-long2 *ngIf="long_dscr"></app-long2>
+            <app-short2 *ngIf="!long_dscr"></app-short2>
         </div>
     </div>
 
