--- a/src/app/components/p2/p2.component.scss
+++ b/src/app/components/p2/p2.component.scss
@@ -68,12 +68,16 @@ video {
     margin-top: 7px;
 }
 
-.name {
-    margin-right: auto;
-}
-
 .orange {
     color:orange;
+}
+
+.big {
+    font-size: 60px;
+}
+
+.name {
+    margin-right: auto;
 }
 
 
