--- a/src/app/components/p1/short/short.component.html
+++ b/src/app/components/p1/short/short.component.html
@@ -11,11 +11,11 @@
             see the pixels being placed live, which gives the site a 'lively' feel (when populated).</p>
         <p>
         <p>
-            Even though the project does not aim to solve a particular business problem, nor is it particularly entretaining
-            without a user base interacting with it, it did serve as a good template project. For once, it helped me learn more about 
+            Even though the project does not aim to solve a particular business problem, nor is it particularly entertaining
+            without a user base interacting with it, it served as a good template project. For once, it helped me learn more about 
             <span class="orange">Typescript</span>, <span class="orange">Angular</span> and <span class="orange">Firebase</span>,
-            incorporating it all into a fullstack application. Moreover, it also gave me a lot of insight into how to think about
-            the page structure and how to interact with it.
+            incorporating it all into a full-stack application. Moreover, it also gave me a lot of insight into how to think about
+            the page structure and new ways to interact with it.
         </p>
         
     </div>
