--- a/src/app/components/p2/long2/long2.component.html
+++ b/src/app/components/p2/long2/long2.component.html
@@ -1,1 +1,69 @@
-<p>long2 works!</p>
+<h1>Overview</h1>
+<p>
+    Created using: <span class="orange">HTML/CSS</span>, <span class="orange">Angular</span>,
+        <span class="orange">TypeScript</span>, <span class="orange">Firebase</span>, <span class="orange">Python</span>,
+        <span class="orange">Postgres SQL</span>
+</p>
+
+<p>
+    I developed Rank<span class="grey">2</span>Earn in order to solve a specific business problem. During last year's crypto
+    bull run, blockchain games - also known as 'play to earn' games - gained a lot attention. As a result, sites like
+    <a href="https://playtoearn.net/blockchaingames">playtoearn.net</a> got a lot of traffic from people trying to catch
+    promissing projects at an early stage. However, I couldn't find a way to check and compare community growth from all 
+    these different projects - specially their discord server growth.
+</p>
+<p>
+    That's the problem Rank<span class="grey">2</span>Earn solves. It keeps daily track of the projects' 
+    twitter and discord. This way users can sort through and see which ones are growing fastest, have the biggest
+    community, or have staled their growth.
+</p>
+
+<h1>Project Structure</h1>
+    <img src="assets/r2e_project_structure.png" alt="">
+
+<h1>Challenges</h1>
+<p>
+    Since this was my first project, even the basic things like setting up Angular and Firebase demanded time.
+    Once done, the main challenges I faced was thinking of a way to organize the collected data.
+</p>
+<h2>Organizing data</h2>
+    <img src="assets/index_table.png" alt="">
+    <br>
+    <br>
+<p>
+    To organize the collected data, I started by creating an 'index table', where each row has the necessary information 
+    of a project plus an 'id' associated.
+</p>
+<p>
+    These ids are used as reference to the name of the table that holds their data. For example, a project with an
+    id of N will have its information found in tables 'table_N'(discord) and 'table_NF'(twitter).
+    <br>
+    <br>
+</p>
+    <img src="assets/table_example.png" alt="">
+    <br>
+    <br>
+<h2>Data entry</h2>
+<p>
+    In order to feed the database new projects to keep track of, I first write the content that will go into the 'index table' to
+    a 'add_file.xlsx'.
+</p>
+    <img src="assets/add_file.png" alt="">
+    <br>
+    <br>
+<p>
+    Then, I run a python script to pop the repeated entries and add the ones that pass to the database. 
+</p>
+    <br>
+    <img src="assets/add_db.png" alt="">
+
+<h1>Conclusion</h1>
+<p>
+    There are lots of things I want to improve in this project. The UI is looking very amateurish and the data is set statically.
+    Moving forwards, I want to make it so the data updates dynamically and the landing page to work as a 'discovery' tool.
+</p>
+<p>
+    I think this was a very cool and challenging first project. Even through all the difficulties, I had a great time developing it.
+    So much so that I decided to set my career path in this field - when I first started the project, my intent was to simply make
+    a business out of it, not a career move.
+</p>
