--- a/src/app/components/p2/short2/short2.component.html
+++ b/src/app/components/p2/short2/short2.component.html
@@ -1,1 +1,19 @@
-<p>short2 works!</p>
+<h1>Overview</h1>
+<p>
+    Created using: <span class="orange">HTML/CSS</span>, <span class="orange">Angular</span>,
+        <span class="orange">TypeScript</span>, <span class="orange">Firebase</span>, <span class="orange">Python</span>,
+        <span class="orange">Postgres SQL</span>
+</p>
+
+<p>
+    I developed Rank<span class="grey">2</span>Earn in order to solve a specific business problem. During last year crypto
+    bull run, block chain games - also known as 'play to earn' games - gained a lot attention. As a result, sites like
+    <a href="https://playtoearn.net/blockchaingames">playtoearn.net</a> got a lot of traffic from people trying to catch
+    promissing projects at an early stage. However, I couldn't find a way to check and compare community growth from all 
+    these different projects - specially their discord server growth.
+</p>
+<p>
+    That's the problem Rank<span class="grey">2</span>Earn solves. It keeps daily track of the projects' 
+    twitter and discord. This way users can sort through and see which ones are growing fastest, have the biggest
+    community, or have staled their growth.
+</p>
