--- a/src/app/components/p2/long2/long2.component.html
+++ b/src/app/components/p2/long2/long2.component.html
@@ -7,15 +7,15 @@
 
 <p>
     I developed Rank<span class="grey">2</span>Earn in order to solve a specific business problem. During last year's crypto
-    bull run, blockchain games - also known as 'play to earn' games - gained a lot attention. As a result, sites like
+    bull run, blockchain games - also known as 'play to earn' games - gained a lot of attention. As a result, sites like
     <a href="https://playtoearn.net/blockchaingames">playtoearn.net</a> got a lot of traffic from people trying to catch
-    promissing projects at an early stage. However, I couldn't find a way to check and compare community growth from all 
-    these different projects - specially their discord server growth.
+    promising projects at an early stage. However, I couldn't find a way to check and compare community growth from all 
+    these different projects - especially their discord server growth.
 </p>
 <p>
     That's the problem Rank<span class="grey">2</span>Earn solves. It keeps daily track of the projects' 
-    twitter and discord. This way users can sort through and see which ones are growing fastest, have the biggest
-    community, or have staled their growth.
+    Twitter and Discord. This way users can sort through and see which ones are growing fastest, have the biggest
+    community or have staled their growth.
 </p>
 
 <h1>Project Structure</h1>
@@ -59,11 +59,11 @@
 
 <h1>Conclusion</h1>
 <p>
-    There are lots of things I want to improve in this project. The UI is looking very amateurish and the data is set statically.
-    Moving forwards, I want to make it so the data updates dynamically and the landing page to work as a 'discovery' tool.
+    There are lots of things I want to improve on in this project. The UI is looking very amateurish and the data is set statically.
+    Moving forwards, I want to make it so the data updates dynamically, and the landing page to work as a 'discovery' tool.
 </p>
 <p>
-    I think this was a very cool and challenging first project. Even through all the difficulties, I had a great time developing it.
-    So much so that I decided to set my career path in this field - when I first started the project, my intent was to simply make
+    I think this was a very cool and challenging first project. Even though all the difficulties, I had a great time developing it.
+    So much so that I decided to set my career path in this field - when I first started the project, I intended to simply make
     a business out of it, not a career move.
 </p>
