--- a/src/app/components/p2/p2.component.html
+++ b/src/app/components/p2/p2.component.html
@@ -29,6 +29,6 @@
     </div>
 
     <div class="video">
-        <video src="assets/try1.mp4" controls></video>
+        <video src="assets/r2e_demo.mp4" controls></video>
     </div>
 </div>
