--- a/src/app/components/p1/p1.component.html
+++ b/src/app/components/p1/p1.component.html
@@ -8,7 +8,7 @@
         </div>
         <div>
             <a href="https://dotcanvas-b2cb6.web.app/">
-                <img src="assets/live.png" alt="" class="icon">
+                <img src="assets/go-icon.png" alt="" class="icon">
             </a>
         </div>
         <div class="name">
