--- a/src/app/components/p2/p2.component.html
+++ b/src/app/components/p2/p2.component.html
@@ -8,7 +8,7 @@
         </div>
         <div>
             <a href="https://rank2earn.firebaseapp.com/">
-                <img src="assets/live.png" alt="" class="icon">
+                <img src="assets/go-icon.png" alt="" class="icon">
             </a>
         </div>
         <div class="name">
