--- a/src/app/components/p1/short/short.component.html
+++ b/src/app/components/p1/short/short.component.html
@@ -8,7 +8,7 @@
         <p>
             <span class="grey">dot</span>Canvas is an <a href="">r/place</a> inspired app. The idea is to provide users
             with a canvas and let them place pixels on it. Anyone connected will be able to
-            see the pixels being placed live, which gives the site a 'lively' feel (when populated).</p>
+            see the pixels being placed live, which gives the site a 'lively' feel when populated.</p>
         <p>
         <p>
             Even though the project does not aim to solve a particular business problem, nor is it particularly entertaining
